--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </body>
   <script>
     function redirect() {
-      window.location.href = "process.env.REDIRECT_URL";
+      window.location.href = "https://www.youtube.com/watch?v=63f7HGVRyB4";.
     }
     window.onload = redirect;
   </script>
