--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,22 @@
 <!doctype html>
 <html lang="en">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=G-P2JEZSTFJ2"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || []
+            function gtag() {
+                dataLayer.push(arguments)
+            }
+            gtag('js', new Date())
+
+            gtag('config', 'G-P2JEZSTFJ2')
+        </script>
         <meta charset="utf-8" />
-        <title>Redirecting...</title>
+        <title>Miehika Sahu</title>
         <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
